[package]
name = "lms"
version = "0.1.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15.36", features = ["full"] }
proc-macro2 = "0.4.30"
quote = "0.6.12"
